trunk/Archive2/70/7ff54bd81744cf/output
main.cpp:4:5: error: 'virtual' can not be specified on member function templates
    virtual void func();
    ^~~~~~~~
1 error generated.
